Fixed UI element position issue on mobile devices

--- a/html/css/settings.css
+++ b/html/css/settings.css
@@ -5,9 +5,6 @@
 	display: none;
 }
 
-#div_zone_name_list {
-}
-
 #div_zone_name_list .add-on {
-	width: 30%;
+	width: 28%;
 }
